updated at: 2023-04-25 18:26, 正2の冪乗角形のメッシュ - Package Shop @aivrc - BOOTH

--- a/VRChat/25/1105725.html
+++ b/VRChat/25/1105725.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a9692mVHpBDaUCru+8py2KlQ2H57KWau9LFU6f4PPIU="></script>
+    "r01caMbpftUApkYJyN2/ZChqhYT79A32Xwz31ESqdKY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"正2の冪乗角形のメッシュ","description":"丸い鏡や丸いアイコン表示などに使えるメッシュです。\n\n内容物\n・正方形メッシュ\n・正8角形メッシュ\n・正16角形メッシュ\n・正32角形メッシュ\n・正64角形メッシュ\n・正128角形メッシュ(ほぼ円形)","url":"https://booth.pm/ja/items/1105725","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dfbd4ce6-2e9e-476c-a792-d2031d877f10/i/1105725/ef7a5064-75a2-42be-897e-c51b6a3316a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a9692mVHpBDaUCru+8py2KlQ2H57KWau9LFU6f4PPIU="></script>
+    nonce="r01caMbpftUApkYJyN2/ZChqhYT79A32Xwz31ESqdKY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1105725/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1105725/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
