updated at: 2023-04-25 18:27, オリジナル3Dモデル『マロン』 - こよりLabo - BOOTH

--- a/VRChat/63/1105063.html
+++ b/VRChat/63/1105063.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CRsWEIhGed1IoGu3smuG7uBb1lh+e5eque6bXzLpKWg="></script>
+    "bHro7Tah8anYAHwCuHEAv5bOiU7hUm9vt9y4XDKxGUc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『マロン』","description":"オリジナル3Dモデル『マロン』\n制作者：長兎路こより\n\nネザーランドドワーフの女の子「マロン」です！\n\n本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。\nVRchat、VRCSDK3での使用を想定して製作していますが、ゲームや動画配信等でもご利用いただけます。\n\nモデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。","url":"https://booth.pm/ja/items/1105063","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/14387c17-7baa-40da-a7a0-96b004d72619/i/1105063/cab893f1-fc6f-4303-b319-642728a481c9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CRsWEIhGed1IoGu3smuG7uBb1lh+e5eque6bXzLpKWg="></script>
+    nonce="bHro7Tah8anYAHwCuHEAv5bOiU7hUm9vt9y4XDKxGUc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1105063/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1449
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1105063/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1449
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
