--- a/VRChat/12/1104012.html
+++ b/VRChat/12/1104012.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "F2x+YgpwrOrvRNdZf+dPIsunq12WEFyFoXEagaTcK5g="></script>
+    "/Skh7jRyfwxrQsDyj1o/IcaE/N4kf8azodHOlOr45GI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Ykr-Military Vest「VPC」","description":"2019/02/24　名称変更　Ykr-Military Vest「VPC」\n旧名「Ykr-body_armor」※商品内容は以前のと全く変わりません。\n\n\n本製品は、VRChat向け、fbx形式のボディーアーマとバックパックのモデルです。\n\n胴体の防御面が不安？それであればこちらを装着しましょう。\nマガジンポーチ、ターニケット、モルヒネ、エピネフリン、無線機、スモークグレネード、多数装備。\n\n\n▼製品内容\nreadme\nFBXファイル\nテクスチャファイル\n\n▼本体説明\n「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\n民間用モデルですが、軍事用として、改造も可能です。\n\nポリゴン数：3812\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n\n６．Ykr-Military Vest「6V23」を作成したことにより\n名称を変更させていただきます。\n今後もよろしくお願いいたします\n\n","url":"https://booth.pm/ja/items/1104012","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1104012/da6c97bd-888f-4ac3-bb44-e6ed04d222f1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F2x+YgpwrOrvRNdZf+dPIsunq12WEFyFoXEagaTcK5g="></script>
+    nonce="/Skh7jRyfwxrQsDyj1o/IcaE/N4kf8azodHOlOr45GI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1104012/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              327
+                              328
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1104012/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              327
+                              328
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
