--- a/VRChat/72/1103072.html
+++ b/VRChat/72/1103072.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "D07CL3/X2G2ziXk4bKPUcG5pC0pnM4YVuKnmEzi5FUQ="></script>
+    "7gClBAUYD9bbLXnRbz8bfgGyyeW9C4lupq3q3uIYmac="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フリー素材保管蔵","description":"フリー素材の配布です。\n自由に使用して構いません。再利用可能なかたちで同梱配布販売しても良いです。クレジット表記不要。ただしいかなる損害にも責任を持ちません。\n今後いろいろ追加していく予定。たぶん！\n\n2019/01/25追加品\n・PokkuriMatcap.png .psd　（空々神社巫女服１のぽっくりで使用したもの。特殊用途なマットキャップ）\n・下着.png\n・下着2ForQuichebody.png .psd　（下着類はキッシュ用素体のテクスチャーn_body.pngへ合成して使う前提のもの。例のタートルや巫女服に同梱したものと同一）\n\n2018/11/23\n・flarematcap.png\n・flarematcap2.png　（例のタートルネックセーターに使用したmatcap）","url":"https://booth.pm/ja/items/1103072","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1103072/dc3afe64-cc04-4641-8208-fbb0b405501b_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D07CL3/X2G2ziXk4bKPUcG5pC0pnM4YVuKnmEzi5FUQ="></script>
+    nonce="7gClBAUYD9bbLXnRbz8bfgGyyeW9C4lupq3q3uIYmac="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -179,7 +181,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1103072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -194,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1103072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
