--- a/VRChat/97/1102597.html
+++ b/VRChat/97/1102597.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/aeVVHT9w19hUFEiVAmudy15RbRFYCucnltlA896HeU="></script>
+    "0QxVM9flcsmQ7ZbzcDW6vwsC4SoM/DDKv6Mz08L+lzQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"8NeighborFilterシェーダー","description":"周囲のピクセルを参考して計算するフィルタをかけることができるシェーダーです。\nこのシェーダーを適用したオブジェクト越しに見ると世界が少し変わって見えます。\n\n紹介ツイート・使用例↓\nhttps://twitter.com/gatosyocora/status/1064913102460743680\nhttps://twitter.com/gatosyocora/status/1065312106793250816\n(商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません)\n\n設定可能なパラメータは以下の通りです。\n・CullMode : 表面、裏面を描画するか\n\n[Filter]\n・Auto Correction : 3x3の項目に入力した値の合計値を自動的にaに入力する\n・3x3のマトリクス : 計算時の重みとなる整数\n・a : 値が大きくなり発光するのを防ぐ\n・Np : どれぐらい離れたピクセルを参考に使うか\n\n[Preset]\n3x3マトリクスおよびaの値を各フィルタに合わせた値に変更\n・Sharpening : 鮮鋭化フィルタ\n・Gaussian : ガウシアンフィルタ\n・Laplacian : ラプラシアンフィルタ\n\n〇利用規約\nプログラムの著作権はgatosyocoraに帰属します。\n商用利用、改変、再配布はしていただいて大丈夫です。\nしかし、使用や改変、再配布時に自作発言を禁止します。\n改変して配布する場合には以下のクレジットを配布物のどこかに含めるようにしてください。\n使用時にはクレジットを記載する必要はありません。\n\n〇免責事項\n本製品を使って発生した問題に対してはgatosyocoraは一切の責任を負いません。\n\nBoostもしていただけるとすごく嬉しいです。","url":"https://booth.pm/ja/items/1102597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1102597/e6a20fe2-cda1-49e2-b027-3d396d8dae75_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/aeVVHT9w19hUFEiVAmudy15RbRFYCucnltlA896HeU="></script>
+    nonce="0QxVM9flcsmQ7ZbzcDW6vwsC4SoM/DDKv6Mz08L+lzQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1102597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               180
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1102597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               180
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
