--- a/VRChat/91/1102491.html
+++ b/VRChat/91/1102491.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VYyTQvDxGVXpjSk7t1KHhU69vnzohd2noJ1J7mcwiEI="></script>
+    "fSgNNoqzV3hGYG6lbiMXBSRE0/2goh45RlLg3R5Krsc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリップライト","description":"クリップライト\n\n■モデル製作：ハザマススム\n　□Twitter https://twitter.com/hazama_susumu\n\n■説明\n　□クリップライトです\n　□三角面1854です\n　□一応ボーンは入れてみましたが、unityでの使い方は分かりません\n　□何故かunityで読み込むと面が裏になってしまうので\n　　cliplight.fbxとunitypackage内fbxは面が反転してあります\n　　cliplightomote.fbxが本来のモデルです\n\n■内容物\n　□cliplight.fbx\n　□cliplightomote.fbx\n　□各テクスチャファイル\n　□CLIPLIGHT.unitypackage\n　□README.txt\n\n■免責\n　□このモデルデータを使って起きた不利益は\n　　いかなる場合でも製作者は一切責任を負いません\n　□著作権はハザマススムにあります\n\n■許可\n　□非商用・商用利用\n　□非改変・改変利用\n\n■禁止事項\n　□再配布\n　□自作発言\n　□迷惑行為\n","url":"https://booth.pm/ja/items/1102491","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1102491/49552d82-6137-45a2-845a-3e4170944f40_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VYyTQvDxGVXpjSk7t1KHhU69vnzohd2noJ1J7mcwiEI="></script>
+    nonce="fSgNNoqzV3hGYG6lbiMXBSRE0/2goh45RlLg3R5Krsc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1102491/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1102491/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
