--- a/VRChat/28/1101728.html
+++ b/VRChat/28/1101728.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UGcBLN39BIpPlL+t+O2m3Abq8yat9zGE/Xjy/FXX7ag="></script>
+    "jYkD5QxZQacW/BcvG7j+LZuNI9RxwDAGgSbLAUor9oA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"温泉ハンドタオル【無料有】","description":"温泉やお風呂で頭に乗せるタオルです。\nVRChatでの使用を想定しています。\n△680ポリゴン\n\n - 利用方法 -\n\nunitypackageをインポートし、prefabをヒエラルキーに突っ込んでください。\nマテリアルの変更で柄の変更が行えます。\n\n\n - 利用規約 -\n\n【許可】\n・改変\n・モデルを使用しての営利活動\n・アバターペデスタルの利用\n\n【禁止】\n・再配布や販売(改変の有無を問わず)\n\n\n--------------------\n\n雨鮭\n@amesake_san","url":"https://booth.pm/ja/items/1101728","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/088f9e6d-aa90-4805-b849-17f9ee953b99/i/1101728/854d82b2-8668-4dd2-bd54-a9b736ea5946_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UGcBLN39BIpPlL+t+O2m3Abq8yat9zGE/Xjy/FXX7ag="></script>
+    nonce="jYkD5QxZQacW/BcvG7j+LZuNI9RxwDAGgSbLAUor9oA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1101728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               267
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1101728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               267
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
