updated at: 2023-04-25 18:28, テクスチャ素材『VRChatアバター向け瞳パック』 - ふらいどきっちん。 - BOOTH

--- a/VRChat/52/1101552.html
+++ b/VRChat/52/1101552.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0y10vQ2nx2+Spj11R9D2LzdBorEEf2/9XzcoEfepU+Y="></script>
+    "QzaqjavKWM6M4YNJoR5swpCi6zjB+ofyc23MGjQ/rLs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"テクスチャ素材『VRChatアバター向け瞳パック』","description":"■テクスチャ素材『VRChatアバター向け瞳パック』■\n\n□概要□\nVRChatアバター向けの瞳テクスチャパックです。『アリシア種の猫の子』用設定済みマテリアル同梱（UTS2）\n単体のテクスチャも付属していますので、猫の子以外のアバターにもご利用いただけます。\nこのファイルにはShaderは付属していません。\n(c)Unity Technologies Japan/UCL\n\n3種+1、合計13種類にオッドアイのサンプルが入っています。改変用のPSDデータ付きです。\n\n□導入方法は添付してあるreadmeをご確認ください□\n\n■利用規約■\n再配布、改変共に可能です。\nこの素材を利用してのトラブル等の責任は負いかねますのでご了承ください。","url":"https://booth.pm/ja/items/1101552","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e63ccc03-87f0-44e3-aab3-9463a1329dc3/i/1101552/96fb8a84-2d68-4536-8c33-e150108f047d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0y10vQ2nx2+Spj11R9D2LzdBorEEf2/9XzcoEfepU+Y="></script>
+    nonce="QzaqjavKWM6M4YNJoR5swpCi6zjB+ofyc23MGjQ/rLs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1101552/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               261
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1101552/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               261
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
