updated at: 2023-04-25 18:29, ショートケーキ　3Dモデル - 木漏れ日の小物屋 - BOOTH

--- a/VRChat/86/1101386.html
+++ b/VRChat/86/1101386.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kaVSjCJNYlkzWbOf841dtqxe0laOX8C5GBvMmJuiL5I="></script>
+    "kv/LB5nhRu+IN1qe17Rn9cWIPZ2nRVKwxMyKtTuKxRY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ショートケーキ　3Dモデル","description":"誕生日にもクリスマスにも使えるかわいいショートケーキです。VRchatでの使用を目的として作成しました。\nショートケーキ、フォークともにシェイプキーで欠けさせたり刺したりできるようになっていますが、全部ぶっささりフォークと皿は別モデルです。サイズを大きくして振り回しても面白そう…\n\n●内容物\n\n▽unitypackage\n　▽Materials\n　　- shortcake.png\n　　- fork.mat\n　　- shortcake.mat\n　- cake.fbx\t△1120\n\t苺とケーキの角が消えるシェイプキーがあります。\n　- fork.fbx\t△322\n\t苺とケーキの角が消えるシェイプキーがあります。\n　- cakefork.fbx\t△1092\n　- dish.fbx\t△293","url":"https://booth.pm/ja/items/1101386","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1de58a1-2cce-44e8-acd7-784faaded619/i/1101386/767b3b68-94ad-4d4f-ab12-4de3c3eb3d42_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kaVSjCJNYlkzWbOf841dtqxe0laOX8C5GBvMmJuiL5I="></script>
+    nonce="kv/LB5nhRu+IN1qe17Rn9cWIPZ2nRVKwxMyKtTuKxRY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1101386/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1101386/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
