updated at: 2023-04-25 18:30, それっぽリボルバー - Black.Cat&#39;s - BOOTH

--- a/VRChat/49/1099949.html
+++ b/VRChat/49/1099949.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "j2smzQozMIZucO6WO4gOq5/relDALm1fTeFQ/gAgdbM="></script>
+    "zpSKS2xxxzicmVwjU1XDTcXf4CzDfDhERE7wCjEhHPs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"それっぽリボルバー","description":"画像をスタンダードシェーダーの状態のものに差し替えました。\nパッケージがアセット直下になっていたのを修正しました。\n\nポリゴン：1290\n\n更新：\n2018/12/06\nシリンダーが回るようになりました。\n\n\n※利用規約※\n\n営利利用:可\n【ゲーム, 映像作品, 動画配信等にご利用いただけます】\n\n改変:可\n【モデルを含めた当データの改変は自由です】\n\n再配布:禁止\n【テクスチャ、モデルともに他者への二次配布を禁止します】","url":"https://booth.pm/ja/items/1099949","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/370bd2d8-e720-4d70-a153-03e2d3872e42/i/1099949/c4cde71f-a685-4a2c-be3f-92573f4ed6a5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j2smzQozMIZucO6WO4gOq5/relDALm1fTeFQ/gAgdbM="></script>
+    nonce="zpSKS2xxxzicmVwjU1XDTcXf4CzDfDhERE7wCjEhHPs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1099949/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1099949/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
