updated at: 2023-04-25 18:30, 二眼レフカメラ（VRChat向けアクセサリー） - Megalo Arms corp. - BOOTH

--- a/VRChat/80/1098780.html
+++ b/VRChat/80/1098780.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xRKFbH15bMvtQ9YIQnZD4wR61ROx34XfASlhaKqXr7E="></script>
+    "nhFU0KTnogb4m/LkFI2bgB1pf1tFWS5IDcExRYhVEvg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"二眼レフカメラ（VRChat向けアクセサリー）","description":"二眼レフの3Dモデルです。\nVRChatのカメラ機能を楽しく使っていただく事を目的に制作しました。\n無料ですのでお気軽にお使いください。\nアバターのアクセサリーやワールドの小物などにもどうぞ。\nVRChatでのご使用を想定して制作していますがその他のコンテンツでもご利用いただけます。\n\nボーンとシェイプキーにより撮影時と非撮影時に変えることができます。\n\n三角面数・796\nマテリアル数・1","url":"https://booth.pm/ja/items/1098780","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fd5759e4-ba4e-4d8b-95f2-d86f545aef0c/i/1098780/1e9483de-a5a6-4e76-b265-04385f2a3654_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xRKFbH15bMvtQ9YIQnZD4wR61ROx34XfASlhaKqXr7E="></script>
+    nonce="nhFU0KTnogb4m/LkFI2bgB1pf1tFWS5IDcExRYhVEvg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1098780/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               450
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1098780/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               450
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
