updated at: 2023-04-25 18:33, VRChat想定ケモノアバター　ヴォールク(Bork) - 黒鳥ケモノ工房 - BOOTH

--- a/VRChat/38/1095738.html
+++ b/VRChat/38/1095738.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "781xv/uCTR8ddcb22nSXnfjAqJN5Ulro331c3mUQoRM="></script>
+    "r0p3jttMrCwTGswP8SY8ldBRUBlBb5B57sOGhFm847k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定ケモノアバター　ヴォールク(Bork)","description":"VRChat想定ケモノアバター　ヴォールク(Bork)\n\n制作者：kurotori\n\n概要\nVRChatでの利用を措定したガチムチ体型のオオカミ獣人♂の３Dモデルです。\nVRChat以外での利用も可能です。詳しくは利用規約をお読みください","url":"https://booth.pm/ja/items/1095738","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fc6b0a4d-1d17-4d55-a0f6-963e574057a2/i/1095738/380bc020-035d-4a82-9f12-e0ac3118eb5f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="781xv/uCTR8ddcb22nSXnfjAqJN5Ulro331c3mUQoRM="></script>
+    nonce="r0p3jttMrCwTGswP8SY8ldBRUBlBb5B57sOGhFm847k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1095738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               402
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1095738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               402
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
