updated at: 2023-04-25 18:33, 巣黒るい　初代モデル(free版) - 巣黒るいのおみせやさん - BOOTH

--- a/VRChat/68/1095368.html
+++ b/VRChat/68/1095368.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iYVQpm7LyI02JnnkoJoZkyBFjmz5PdthgVddTZMgvac="></script>
+    "DQT2KvZinR3xKz1wKocNbx/GUie0aOZHYUI1R6dvzt4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"巣黒るい　初代モデル(free版)","description":"巣黒るいの初代モデルデータアルよ!!\n\n基本的に楽しく誰も傷つかない使い方をしてくれたら、規約で禁止してること以外は好きに使ってくれたらうれしいアルよ!!!!\n\nfree版は髪留めがないアル。\nboost版は髪留めがあるアル。\n\n利用規約\nhttps://ruisquirrel.wixsite.com/rui-squirrel/rui1stmodel","url":"https://booth.pm/ja/items/1095368","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3dedb598-e4bd-42fc-9148-1a49d85f9dd7/i/1095368/66f620be-c642-4329-bf6b-0a721f0a3756_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iYVQpm7LyI02JnnkoJoZkyBFjmz5PdthgVddTZMgvac="></script>
+    nonce="DQT2KvZinR3xKz1wKocNbx/GUie0aOZHYUI1R6dvzt4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1095368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1095368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
