updated at: 2023-04-25 18:34, VRC花札システム - a3s - BOOTH

--- a/VRChat/79/1095079.html
+++ b/VRChat/79/1095079.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ecVRvWO67wvVTO8nhw9Jd7X168rUbn6iLWOad81v7lU="></script>
+    "lg1KsXrRlIHBgfY99ikjCl1u+8ZCg1Jd1y5wpZHpzd4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC花札システム","description":"VRCにアップした花札システムです。\nゲームワールド増えろ！\n単機能にまとめる(シャッフル機構だけとか)めんどくさいので、配布ダメそうなのを除いてそのままupした手抜きです。\n適当に使ってください。\n\n●以下の機能が含まれます。\n・こいこいの役/バカッ花の絵札点の計算シェーダー\n・シェーダーへカード48枚を見分けて値設定可能な VRCトリガー/アニメーション･アニメーターレイヤー･パラメータ･ステート設定/シャッフル機構\n・上記48枚見分けるやつは非常に改変しづらいので利用は覚悟すること(ちょっとだれかもっと賢い方法あったら教えて)\n・3D花札カード。それに使ってる、重なっても半透明特有の前後入れ替わりが起きずZバッファ計算するために、ワールド用にバカっぽい感じでやっつけた窓枠シェーダー\n・各場カメラの設定\n・寛永通宝と丁銀(ワンドロ)\n\n●以下の機能は含まれません\n・カード内の動物(アセットストアのものとかのため)\n・背景画像(あの金色屏風)\n・説明ボード画像\n・その他VRCSDKとか標準アセットとか系諸々","url":"https://booth.pm/ja/items/1095079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1095079/fe460618-2685-4853-9bbb-501fb3072ba7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ecVRvWO67wvVTO8nhw9Jd7X168rUbn6iLWOad81v7lU="></script>
+    nonce="lg1KsXrRlIHBgfY99ikjCl1u+8ZCg1Jd1y5wpZHpzd4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1095079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               150
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1095079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               150
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
