updated at: 2023-04-25 18:34, ３Dモデル - 縫いウサギ - - KUYUYU/電脳屋 - BOOTH

--- a/VRChat/28/1094728.html
+++ b/VRChat/28/1094728.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "N4caA417fadHKy/orWsrjK9L82Y7JSYYmxQ6CX0tMR8="></script>
+    "mIuzpJVe4drkG4NnQJd8k+LsJAb6YEfl5NlybE4JRPQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" ３Dモデル - 縫いウサギ -","description":"VRC/Unityゲーム当に利用可能なヌイウサギの３Dモデルです。\n\n\n元々インテリア用として作った為ポリゴン数が多いので自分が使いやすい様に改変できる方は改変してみてください。\n\nジェネリック形式で改変したりしてアバターにするのも可能だと思います。\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。","url":"https://booth.pm/ja/items/1094728","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1094728/fdac40c9-745a-42d2-bb43-ed4ae779d4f3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N4caA417fadHKy/orWsrjK9L82Y7JSYYmxQ6CX0tMR8="></script>
+    nonce="mIuzpJVe4drkG4NnQJd8k+LsJAb6YEfl5NlybE4JRPQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1094728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               160
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1094728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               160
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
